--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "Dashboard page",
   "main": "src/app.js",
   "scripts": {
-    "build": "webpack --mode=production",
-    "watch": "webpack --progress --watch --mode=development",
-    "start": "webpack-dev-server --open --mode=development"
+    "dev": "webpack --mode development --watch",
+    "build": "webpack --mode production",
+    "deploy": "npm run build && gh-pages -d dist",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -17,33 +18,37 @@
   "bugs": {
     "url": "https://github.com/ykosinets/mobile-ranker/issues"
   },
+  "browserslist": [
+    "last 1 version",
+    "> 1%",
+    "maintained node versions",
+    "not dead"
+  ],
   "homepage": "https://github.com/ykosinets/mobile-ranker#readme",
   "devDependencies": {
-    "@babel/core": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
-    "autoprefixer": "^9.4.2",
-    "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "compression-webpack-plugin": "^2.0.0",
-    "css-loader": "^1.0.1",
-    "file-loader": "^2.0.0",
-    "html-srcsets-loader": "^0.5.1",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.4.10",
+    "babel-loader": "^8.0.5",
+    "browser-sync": "^2.26.3",
+    "browser-sync-webpack-plugin": "^2.2.2",
+    "css-loader": "^2.1.1",
+    "file-loader": "^3.0.1",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.5",
-    "node-glob": "^1.2.0",
-    "node-sass": "^4.10.0",
+    "mini-css-extract-plugin": "^0.5.0",
+    "node-sass": "^4.11.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.27.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.2.3"
   },
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "chart.js": "^2.9.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.6"
   }
